cambio de colores y cupon nuevo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-                <nav class="navbar navbar-expand-lg navbar-light bg-success  px-3">
+                <nav class="navbar navbar-expand-lg navbar-light bg-danger  px-3">
                     <div class="container-fluid px-5">
                         <img src="/assets/logos/logo-white.png" alt="Foto de Logo">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,13 +36,26 @@
             <div class="row gx-3 gy-3"> 
                 <div class="col-xs-12 col-md-4">
                     <div class="card" style="width: 100%">
+                        <img src="/assets/imgs/chayanne.jpg" class="card-img-top" alt="Foto de Plumón">
+                        <div class="card-body">
+                            <h5 class="card-title">2 entradas para concierto de Chayanne</h5>
+                            <p class="card-text mb-0"><small class="text-muted">Movistar Arena</small></p>
+                            <p class="card-text"><i class="fa-solid fa-location-dot"></i><small class="text-muted">Av. Beaucheff 1204, Santiago, Chile</small></p>
+                            <div class="card-footer bg-transparent border-grey-200 text-end">
+                                <span class="text-secondary">$150.000</Span><span class="text-danger fs-4 fw-bold">$35.000</span>
+                            </div>    
+                        </div>    
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <div class="card" style="width: 100%">
                         <img src="/assets/imgs/foto1.png" class="card-img-top" alt="Foto de Plumón">
                         <div class="card-body">
                             <h5 class="card-title">Plumón Coral Fleece estampado<br>en modelo y tamaño a elección</h5>
                             <p class="card-text mb-0"><small class="text-muted">Plumones Manolino</small></p>
                             <p class="card-text"><i class="fa-solid fa-location-dot"></i><small class="text-muted">9191 Avenida Vitacura, Chile</small></p>
                             <div class="card-footer bg-transparent border-grey-200 text-end">
-                                <span class="text-secondary">$45.990</Span><span class="text-success fs-4 fw-bold">$22.990</span>
+                                <span class="text-secondary">$45.990</Span><span class="text-danger fs-4 fw-bold">$22.990</span>
                             </div>    
                         </div>    
                     </div>
@@ -55,7 +68,7 @@
                             <p class="card-text mb-0"><small class="text-muted">V for Vegan</small></p>
                             <p class="card-text" ><i class="fa-solid fa-location-dot"></i><small class="text-muted">777 Jesse Pinkman, Chile</small></p>
                             <div class="card-footer bg-transparent border-grey-200 text-end">
-                                <span class="text-secondary">$30.990</Span><span class="text-success fs-4 fw-bold">$12.990</span>
+                                <span class="text-secondary">$30.990</Span><span class="text-danger fs-4 fw-bold">$12.990</span>
                             </div>    
                         </div>    
                     </div>
@@ -68,7 +81,7 @@
                             <p class="card-text mb-0"><small class="text-muted">Clínica Dental Quijada</small></p>
                             <p class="card-text"><i class="fa-solid fa-location-dot"></i><small class="text-muted">1342, Blanco Encalada, Chile</small></p>
                             <div class="card-footer bg-transparent border-grey-200 text-end">
-                                <span class="text-secondary">$300.000</Span><span class="text-success fs-4 fw-bold">$25.990</span>
+                                <span class="text-secondary">$300.000</Span><span class="text-danger fs-4 fw-bold">$25.990</span>
                             </div>    
                         </div>    
                     </div>
@@ -81,7 +94,7 @@
                             <p class="card-text mb-0"><small class="text-muted">Suricata almacen</small></p>
                             <p class="card-text"><i class="fa-solid fa-location-dot"></i><small class="text-muted">1071 Miguel Claro, Chile</small></p>
                             <div class="card-footer bg-transparent border-grey-200 text-end">
-                                <span class="text-secondary">$4.200</Span><span class="text-success fs-4 fw-bold">$2.100</span>
+                                <span class="text-secondary">$4.200</Span><span class="text-danger fs-4 fw-bold">$2.100</span>
                             </div>    
                         </div>    
                     </div>
@@ -94,7 +107,7 @@
                             <p class="card-text mb-0"><small class="text-muted">Stukids Centro de Eventos</small></p>
                             <p class="card-text"><i class="fa-solid fa-location-dot"></i><small class="text-muted">133 El tranque, Chile</small></p>
                             <div class="card-footer bg-transparent border-grey-200 text-end">
-                                <span class="text-secondary">$4.000</Span><span class="text-success fs-4 fw-bold">$2.500</span>
+                                <span class="text-secondary">$4.000</Span><span class="text-danger fs-4 fw-bold">$2.500</span>
                             </div>    
                         </div>    
                     </div>
@@ -106,14 +119,14 @@
                             <h5 class="card-title">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</h5>
                             <p class="card-text mb-0"><small class="text-muted">D-Latam Travel</small></p>
                             <div class="card-footer bg-transparent border-grey-200 text-end">
-                                <span class="text-secondary">$80.200</Span><span class="text-success fs-4 fw-bold">$44.100</span>
+                                <span class="text-secondary">$80.200</Span><span class="text-danger fs-4 fw-bold">$44.100</span>
                             </div>    
                         </div>    
                     </div>
                 </div>
             </div>
         </main>
-        <form class="container-fluid bg-success p-5 text-center">
+        <form class="container-fluid bg-danger p-5 text-center">
                 <p class="text-light">Recibe cupones en tu correo</p>
                 <div class="mb-3">
                     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre">
